# metrix

./: Cargo.toml
backend/: Cargo.toml  README.md
backend/metrix-agent/: Cargo.toml
backend/metrix-agent/src/: device_metrics.rs  main.rs  models.rs  send_metrics.rs
backend/metrix-aggregate/src/: main.rs
backend/metrix-api/: Cargo.toml
backend/metrix-api/src/: cors.rs  insert_queue.rs  main.rs  request_models.rs  routes.rs
backend/metrix-console/src/: main.rs
backend/metrix-database/migrations/2021-07-16-225356_initial_metrics_tables/: down.sql
backend/metrix-database/src/: lib.rs  mappers.rs  models.rs  queries.rs
backend/metrix-http/: Cargo.toml
backend/metrix-http/src/: lib.rs
backend/metrix-ingest/src/: main.rs  routes.rs
backend/metrix-models/: Cargo.toml
backend/metrix-models/src/: lib.rs
backend/metrix-utils/src/: lib.rs  math.rs  time.rs
frontend/: Metrix.Dashboard.sln
frontend/Metrix.Dashboard.Web/: Metrix.Dashboard.Web.sln
frontend/Metrix.Dashboard.Web/Client/: Metrix.Dashboard.Web.Client.csproj  Program.cs
frontend/Metrix.Dashboard.Web/Client/Pages/: Index.razor  MetricBrowser.razor
frontend/Metrix.Dashboard.Web/Client/Properties/: launchSettings.json
frontend/Metrix.Dashboard.Web/Client/Shared/: MainLayout.razor
frontend/Metrix.Dashboard.Web/Client/wwwroot/: index.html
frontend/Metrix.Dashboard.Web/Client/wwwroot/css/: app.css
frontend/Metrix.Dashboard.Web/Client/wwwroot/js/: init.js
frontend/Metrix.Dashboard.Web/Client/wwwroot/js/metric-browser/: chart.js
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Client/: Metrix.Dashboard.Web.Client.csproj  Program.cs  _Imports.razor
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Client/Pages/: FetchData.razor
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Client/Shared/: NavMenu.razor
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Client/wwwroot/: index.html
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Server/: Metrix.Dashboard.Web.Server.csproj
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Server/Controllers/: WeatherForecastController.cs
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Server/Pages/: Error.cshtml.cs
frontend/Metrix.Dashboard.Web/Metrix.Dashboard.Web/Shared/: WeatherForecast.cs
frontend/Metrix.Dashboard.Web/Server/: Metrix.Dashboard.Web.Server.csproj  Program.cs  Startup.cs
frontend/Metrix.Dashboard.Web/Server/Pages/: Error.cshtml
frontend/Metrix.Dashboard.Web/Server/Properties/: launchSettings.json
frontend/Metrix.Http/: Metrix.Http.csproj  MetrixClient.cs
frontend/Metrix.Models/: Class1.cs  MetricInsert.cs  MetricInsertPartial.cs  MetricPointQuery.cs  MetricRangeQuery.cs  MetricValue.cs  Metrix.Models.csproj
frontend/Metrix.Models/Backend/: BlankModel.cs  MetricInsert.cs  MetricInsertPartial.cs  MetricPointQuery.cs  MetricQuery.cs  MetricRangeQuery.cs  MetricResult.cs  MetricSizePartial.cs  MetricValue.cs
frontend/Metrix.Models/Frontend/: MetricBrowserModel.cs
frontend/Metrix.Utils/: UtilityMethods.cs
metrix-agent/: Cargo.toml
metrix-agent/src/: device_metrics.rs  main.rs  models.rs
metrix-aggregate/: Cargo.toml
metrix-aggregate/src/: main.rs
metrix-console/: Cargo.toml
metrix-database/: .env  Cargo.toml
metrix-database/migrations/2021-07-23-184825_metrics_table_add_grouping/: down.sql  up.sql
metrix-database/src/: lib.rs  models.rs  schema.rs
metrix-http/: Cargo.toml
metrix-http/src/: lib.rs
metrix-ingest/: .env  Cargo.toml  Rocket.toml
metrix-ingest/src/: ingest_queue.rs  main.rs  request_models.rs  routes.rs
metrix-models/: Cargo.toml
metrix-models/src/: lib.rs  sizes.rs
metrix-utils/: Cargo.toml
metrix-utils/src/: envs.rs  lib.rs  time.rs
metriz-aggregate/: Cargo.toml
metriz-console/: Cargo.toml
metriz-console/src/: main.rs
metriz-database/: Cargo.toml
metriz-database/migrations/2021-07-16-225356_initial_metrics_tables/: up.sql
metriz-database/src/: lib.rs
metriz-ingest/: Cargo.toml
metriz-models/: Cargo.toml
