[package]
name = "metrix-agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.8"
sys-info = "0.9"
heim = "0.0.11"
log = "0.4"
pretty_env_logger = "0.3"

metrix-http = { path = "../metrix-http" }
metrix-models = { path = "../metrix-models" }