[package]
name = "metrix-aggregate"
version = "0.1.0"
edition = "2018"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]

[dependencies]

metrix-http = { path = "../metrix-http" }
metrix-database = { path = "../metrix-database" }
metrix-models = { path = "../metrix-models" }
metrix-utils = { path = "../metrix-utils" }