[package]
name = "metrix-database"
version = "0.1.0"
edition = "2018"
crate-type = "dylib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
metrix-models = { path = "../metrix-models" }
