[package]
name = "metrix-database"
version = "0.1.0"
edition = "2018"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "uuid", "chrono", "numeric"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
metrix-models = { path = "../metrix-models" }
uuid = { version = "0.6.5", features = ["serde", "v4"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.1.2", features = ["serde"] }