[package]
name = "metrix-http"
version = "0.1.0"
edition = "2018"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }

metrix-models = { path = "../metrix-models" }