[package]
name = "metrix-ingest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
uuid = { version = "0.6.5", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

metrix-models = { path = "../metrix-models" }