[package]
name = "metrix-ingest"
version = "0.1.0"
edition = "2018"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]

[dependencies]
config = "0.11"
diesel = { version = "1.4.4", features = ["postgres", "uuid", "chrono", "numeric"] }
uuid = { version = "0.6.5", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
crossbeam = "0.8.1"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.3"

metrix-models = { path = "../metrix-models" }
metrix-database = { path = "../metrix-database" }
metrix-utils = { path = "../metrix-utils" }

[dependencies.rocket]
version = "0.5.0-rc.1"
default-features = false
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]