[package]
name = "metrix-models"
version = "0.1.0"
edition = "2018"
crate-type = "dylib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.6.5", features = ["serde", "v4"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }