[package]
name = "metrix-models"
version = "0.1.0"
edition = "2018"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]

[dependencies]
uuid = { version = "0.6.5", features = ["serde", "v4"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.1.2", features = ["serde"] }
bytesize = { version = "1.1.0" }